fix: header:  z-index: 1 to z-index: 2

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header {
     background-color: #FF6900;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .header-flexbox {
